[gd_scene load_steps=8 format=3 uid="uid://b2tyje5ht0rrt"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_3bqxn"]
[ext_resource type="PackedScene" uid="uid://b6t64f2mlph2n" path="res://scenes/2d.tscn" id="2_fq3m1"]
[ext_resource type="FontFile" uid="uid://bp2yxojpf6w8r" path="res://resour/Ubuntu-B.ttf" id="3_imedj"]
[ext_resource type="Script" path="res://scripts/pause.gd" id="4_bp2e0"]

[sub_resource type="Environment" id="Environment_n57rk"]
background_mode = 1
background_color = Color(0.28906, 0.49472, 0.472957, 1)
ambient_light_source = 2
ambient_light_energy = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjlfa"]
bg_color = Color(0.187831, 0.31856, 0.288143, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_da6al"]
bg_color = Color(0.460995, 0.460995, 0.460995, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Main" type="Node3D"]
script = ExtResource("1_3bqxn")
side = 720.0

[node name="CameraParent" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n57rk")

[node name="Node2D" parent="." instance=ExtResource("2_fq3m1")]
position = Vector2(0, 10000)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HP" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 264.0
offset_bottom = 113.0
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 64
text = "‚ù§Ô∏è‚ù§Ô∏è‚ù§Ô∏è‚ù§Ô∏è‚ù§Ô∏è‚ù§Ô∏è"
vertical_alignment = 1

[node name="Lvl" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -167.5
offset_right = 167.5
offset_bottom = 73.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 64
text = "–£—Ä–æ–≤–µ–Ω—å: 1"

[node name="Finish" type="Panel" parent="CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -180.0
offset_right = 360.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pjlfa")

[node name="Result" type="Label" parent="CanvasLayer/Control/Finish"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 64
text = "–ü–û–ë–ï–î–ê!!!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Finish"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40

[node name="Menu" type="Button" parent="CanvasLayer/Control/Finish/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 32
text = "–≤ –º–µ–Ω—é"

[node name="Next" type="Button" parent="CanvasLayer/Control/Finish/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 32
text = "—Å–ª–µ–¥—É—é—â–∏–π —É—Ä–æ–≤–µ–Ω—å"

[node name="Score" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Left" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="A" type="Panel" parent="CanvasLayer/Control/VBoxContainer/Left"]
custom_minimum_size = Vector2(70, 90)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_da6al")

[node name="A" type="Label" parent="CanvasLayer/Control/VBoxContainer/Left/A"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 64
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="D" type="Panel" parent="CanvasLayer/Control/VBoxContainer/Left"]
custom_minimum_size = Vector2(70, 90)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_da6al")

[node name="D" type="Label" parent="CanvasLayer/Control/VBoxContainer/Left/D"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 64
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space" type="Panel" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_da6al")

[node name="Space" type="Label" parent="CanvasLayer/Control/VBoxContainer/Space"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 64
text = "SPACEüß≤"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="Button" parent="CanvasLayer/Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_imedj")
theme_override_font_sizes/font_size = 64
text = "Pause"
script = ExtResource("4_bp2e0")

[connection signal="pressed" from="CanvasLayer/Control/Finish/HBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Finish/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Pause" to="CanvasLayer/Control/Pause" method="_on_pressed"]
